# rust-practices

./: .gitignore  README.md
atomic/examples/: condvar.rs
atomic/src/: main.rs
clap-examples/: Cargo.toml
clap-examples/examples/: basic.rs  group.rs  group_by_flatten.rs  httpie.rs
con_utils/: Cargo.toml
con_utils/src/: channel.rs
httpie/: Cargo.toml
httpie/examples/: clap.rs
httpie/go/: go.mod  main.go  routine.go
httpie/go/cli/: cli.go
httpie/node/: core.ts  index.ts  package.json  pnpm-lock.yaml  validate.ts
httpie/src/: cli.rs  console.rs  main.rs
kv/: .gitignore  Cargo.toml  build.rs
kv/benches/: pubsub.rs
kv/examples/: bytes.rs  dummy_server.rs  gen_cert.rs  gen_config.rs  memory_server.rs  sled.rs  sled_server.rs
kv/node-binding/: .gitignore  Cargo.toml  package.json
kv/node-binding/__test__/: index.spec.mjs
kv/node-binding/npm/darwin-x64/: README.md  package.json
kv/node-binding/npm/linux-x64-gnu/: README.md  package.json
kv/node-binding/npm/win32-x64-msvc/: README.md  package.json
kv/node-binding/src/: lib.rs
kv/proto/: abi.proto
kv/src/: client.rs  config.rs  error.rs  lib.rs  server.rs
kv/src/network/: frame.rs  mod.rs  multiplex.rs  stream.rs  stream_result.rs  tls.rs  topic.rs
kv/src/pb/: abi.rs  mod.rs
kv/src/service/: command_service.rs  mod.rs  topic_service.rs
kv/src/storage/: memory.rs  mod.rs  sleddb.rs
kv/tests/: server.rs
macros/: Cargo.toml
macros/examples/: vec.rs
macros/src/: lib.rs  main.rs
queryer_old/: Cargo.toml
queryer_old/examples/: covid.rs
queryer_old/queryer-node/: Cargo.toml  index.js  package.json  pnpm-lock.yaml
queryer_old/queryer-node-napi/: Cargo.toml  index.d.ts  index.js  main.ts  package.json
queryer_old/queryer-node-napi/npm/darwin-x64/: README.md  package.json
queryer_old/queryer-node-napi/npm/linux-x64-gnu/: README.md  package.json
queryer_old/queryer-node-napi/npm/win32-x64-msvc/: README.md  package.json
queryer_old/queryer-node-napi/src/: lib.rs
queryer_old/queryer-tauri/: eslint.config.js  package.json  pnpm-lock.yaml
queryer_old/queryer-tauri/src/: App.tsx  main.tsx
queryer_old/queryer-tauri/src-tauri/: Cargo.toml  tauri.conf.json
queryer_old/queryer-tauri/src-tauri/src/: main.rs
queryer_old/src/: convert.rs  fetcher.rs  lib.rs  loader.rs
rgrep/: Cargo.toml
rgrep/examples/: glob.rs  path.rs
rgrep/fixtures/: a.txt  b.txt
rgrep/ngrep/: package.json  pnpm-lock.yaml
rgrep/ngrep/src/: cli.ts  grep.ts
rgrep/rrgrep/: Cargo.toml
rgrep/rrgrep/src/: error.rs  lib.rs  main.rs
rgrep/src/: cli.rs  grep.rs  main.rs
rs-log/: Cargo.toml
rs-log/src/: lib.rs
scrape_url/: Cargo.toml  rust.md
scrape_url/node/: index.ts  package.json  pnpm-lock.yaml  rust.md
scrape_url/src/: main.rs
syntect-examples/: Cargo.toml
syntect-examples/fixtures/: data.json  index.html  typescript.ts
syntect-examples/src/: main.rs
thumbor/: Cargo.toml  build.rs  todo.md
thumbor/abi/: abi.proto
thumbor/src/: main.rs
thumbor/src/engine/: mod.rs  photon.rs
thumbor/src/pb/: abi.rs  mod.rs
thumbor/web/: package.json  pnpm-lock.yaml
