[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
dashmap = "5.5.3"
http = "1.0.0"
prost = "0.10.4"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "io-util", "macros", "net" ] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
anyhow = "1.0.79"
async-prost = "0.4.0"
futures = "0.3.30"

[build-dependencies]
prost-build = "0.12.3"
