[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "kvs"
path = "src/server.rs"

[[bin]]
name = "kvc"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
dashmap = "5.5.3"
flate2 = "1.0.28"
http = "1.0.0"
prost = "0.10.4"
rustls-native-certs = "0.5.0"

serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sled = "0.34.7"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "io-util", "macros", "net", "fs"] }
tokio-rustls = "0.22.0"
tracing = "0.1"
futures = "0.3.30"
tokio-util = { version = "0.7.10", features = ["compat"] }
yamux = "0.9"
tokio-stream = "0.1.15"
toml = "0.8.12"
tracing-appender = "0.1" # 文件日志
tracing-opentelemetry = "0.15" # opentelemetry 支持
tracing-subscriber = { version = "0.2", features = ["json", "chrono"] } # 日志处理
opentelemetry-jaeger = "0.15" # opentelemetry jaeger 支持
regex = { version = "1.10.3", features = ["unicode-case"] }

[dev-dependencies]
anyhow = "1.0.79"
async-prost = "0.4.0"
certify = "0.5.2"
rand = "0.8.5"
criterion = { version = "0.3", features = ["async_futures", "async_tokio", "html_reports"] } # benchmark

[build-dependencies]
prost-build = "0.12.3"

[[bench]]
name = "pubsub"
harness = false
