workspace = { members = ["queryer-node", "queryer-node-napi","queryer-tauri/src-tauri"] }

[package]
name = "queryer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
polars = { version = "0.37.0", features = ["json", "lazy", ] } # DataFrame 库
polars-plan = { version = "0.37.0", features = ["serde"] }
reqwest = { version = "0.11.23", features = ["rustls-tls", "json"], default-features = false }
serde_json = "1.0.113"
sqlparser = "0.43.1" # SQL 解析器
tokio = { version = "1.35.1", features = ["fs", "full"] }
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tracing-subscriber = "0.3.18"
