[package]
edition = "2021"
name = "node-binding"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi6", "serde-json"] }
napi-derive = "2.12.2"
kv = {path = "../../kv"}
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
lazy_static = "1.4.0"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
