[package]
name = "queryer-node"
version = "0.1.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
queryer = { path = "../../queryer_old" }
tokio = { version = "1", features = ["full"] }

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6"]
