[package]
name = "queryer-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = [ "you" ]
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
queryer = { path = "../../../queryer_old" }
tauri = { version = "1.5", features = [ "shell-open" ] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = [ "full" ] }
serde = { version = "1.0.196", features = ["derive"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
